refactor and fix small bugs

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countries Info</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/earth.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
@@ -11,15 +10,12 @@
     <h2>Countries Information</h2>
     <div class="selectors-container">
         <h1>REGION</h1>
-        <select id="regionSelector"></select>
+        <select id="region-selector"></select>
         <h1>SUBREGION</h1>
-        <select id="subRegionSelector"></select>
+        <select id="subregion-selector"></select>
     </div>
 
-    <div class="content-container">
-        <div id="countriesContainer" style="visibility: hidden;"></div>
-        <div id="countriesFacts" style="display: none;"></div>
-    </div>
+    <div class="content-container"></div>
 
     <script src="script.js"></script>
 </body>
